# mpdscrobble

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  mpdscribble_history.py  mpdscrobble.example.conf  pyproject.toml  setup.py  shell.nix
.github/workflows/: ci.yml
mpdscrobble/: __init__.py  __main__.py  constants.py  mpdscrobble.py  utils.py
systemd-service/: mpdscrobble.service
tests/: conftest.py  test_mpdscrobble.py  test_mpdscrobble_lastfm.py  test_mpdscrobble_listenbrainz.py  test_mpdscrobble_maloja.py  test_mpdscrobble_track.py
